# meridian-electronics-ai-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml  deploy.yml  infra-terraform.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/routes/: auth.py  chat.py  health.py
backend/app/services/: auth_service.py  chat_engine.py  demo_users.py  llm_service.py  mcp_client.py  testdata_contract.py
backend/tests/: test_auth_chat.py  test_chat.py  test_lambda_handler.py  test_testdata_contract.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatClient.tsx
frontend/lib/: api.ts
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/terraform/modules/alb/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/amplify/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/apprunner/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/ecr/: outputs.tf
infra/terraform/modules/frontend_cloudfront/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/github_oidc/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/http_api_gateway/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/lambda_backend/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/secrets/: main.tf  variables.tf
scripts/: build_lambda_package.sh
